force-app/main/default/objects/Pharma_Project__c/Pharma_Project__c.object-meta.xml
<CustomObject>
    <label>Pharma Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>