force-app/main/default/objects/Pharma_Project__c/fields/Budget_Spent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Spent__c</fullName>
    <label>Budget Spent</label>
    <summarizedField>Pharma_Project_Budget_Line__c.Spent_Amount__c</summarizedField>
    <summaryForeignKey>Pharma_Project_Budget_Line__c.Pharma_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>