force-app/main/default/objects/Pharma_Project__c/fields/Budget_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Budget_Utilization__c</fullName>
    <formula>IF(Total_Budget__c &gt; 0, Budget_Spent__c / Total_Budget__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>