force-app/main/default/objects/Pharma_Project__c/fields/Meetings_Target__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Target__c</fullName>
    <label>Meetings Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>