force-app/main/default/objects/Pharma_Project__c/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pharma_Projects_Led</relationshipName>
    <type>Lookup</type>
</CustomField>