force-app/main/default/objects/Pharma_Project__c/fields/Round_Table_Meetings_Done__c.field-meta.xml
<CustomField>
    <fullName>Round_Table_Meetings_Done__c</fullName>
    <label>Round Table Meetings Done</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>