force-app/main/default/objects/Pharma_Project__c/fields/Visits_Target__c.field-meta.xml
<CustomField>
    <fullName>Visits_Target__c</fullName>
    <label>Visits Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>