force-app/main/default/objects/Pharma_Project__c/recordTypes/Campaign_Project.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Project</fullName>
    <active>true</active>
    <label>Campaign Project</label>
</RecordType>