force-app/main/default/objects/Pharma_Project__c/recordTypes/Frequent_Evaluation_Project.recordType-meta.xml
<RecordType>
    <fullName>Frequent_Evaluation_Project</fullName>
    <active>true</active>
    <label>Frequent Evaluation Project</label>
</RecordType>