force-app/main/default/objects/Pharma_Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Project_Lead__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>